fix: Form help alignment.

--- a/manon/form-help.scss
+++ b/manon/form-help.scss
@@ -9,11 +9,13 @@ form.help {
 
   div {
     position: relative;
+    padding: 0;
   }
 
   > div,
   > fieldset {
     position: relative;
+    padding: 0;
 
     .help-button {
       position: absolute;
@@ -64,5 +66,6 @@ form.help {
   fieldset {
     max-width: 100%;
     min-width: 0;
+    gap: 0;
   }
 }
